--- a/project1/report/proj1_report.tex
+++ b/project1/report/proj1_report.tex
@@ -76,9 +76,9 @@ represents the fast growing of error
 when you change gamma from $0.08$ to $0.09$ .
 Figure \ref{fig:raw_clean_lsgd} omits the error corresponding to $gamma = 0.09$ for the raw data.
 Our best submission with \textit{least\_squares\_GD} using raw data 
-has an accuracy of $69.7\%$ and use $\gamma = 0.08$.
+has an accuracy of $69.7\%$ and use $gamma = 0.08$.
 With cleaned data (red line in figure \ref{fig:raw_clean_lsgd}), 
-the best submission has $72\%$ and use $\gamma = 0.12$.
+the best submission has $72\%$ and use $gamma = 0.12$.
 
 \begin{figure}[h!]
   \includegraphics[width=\linewidth]{raw_data_least_squares_GD.png}
