--- a/project02/sam.ipynb
+++ b/project02/sam.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from sklearn import svm"
+    "from sklearn import svm\n",
+    "from sklearn.linear_model import SGDClassifier"
    ]
   },
   {
@@ -180,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,22 +223,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clf = svm.SVC(gamma='scale')\n",
-    "clf.fit(train_X, train_y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "def accuracy(y1, y2):\n",
-    "    return np.mean(y1, y2)"
+    "    return np.mean(y1==y2)\n",
+    "def normalize(X):\n",
+    "    means = np.mean(X, axis=0)\n",
+    "    std = np.std(X, axis=0)\n",
+    "    return means, std, (X-means)/std"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearSVC(C=1.0, class_weight=None, dual=True, fit_intercept=True,\n",
+       "          intercept_scaling=1, loss='squared_hinge', max_iter=10000,\n",
+       "          multi_class='ovr', penalty='l2', random_state=None, tol=0.0001,\n",
+       "          verbose=0)"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lsvc = svm.LinearSVC(max_iter=10000)\n",
+    "lsvc.fit(train_X, train_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5937"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy(test_y, lsvc.predict(test_X))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SGDClassifier(alpha=0.0001, average=False, class_weight=None,\n",
+       "              early_stopping=False, epsilon=0.1, eta0=0.0, fit_intercept=True,\n",
+       "              l1_ratio=0.15, learning_rate='optimal', loss='hinge',\n",
+       "              max_iter=1000, n_iter_no_change=5, n_jobs=None, penalty='l2',\n",
+       "              power_t=0.5, random_state=None, shuffle=True, tol=0.001,\n",
+       "              validation_fraction=0.1, verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sgdcl = SGDClassifier()\n",
+    "sgdcl.fit(train_X, train_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5944"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred = sgdcl.predict(test_X)\n",
+    "accuracy(test_y, y_pred)"
    ]
   },
   {
@@ -253,6 +339,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
