--- a/project02/sam.ipynb
+++ b/project02/sam.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from sklearn import svm\n",
-    "from sklearn.linear_model import SGDClassifier"
+    "from sklearn.linear_model import SGDClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.neural_network import MLPClassifier"
    ]
   },
   {
@@ -42,7 +44,7 @@
     "print(\"using nmax =\", nmax, \", cooc.max() =\", cooc.max())\n",
     "\n",
     "print(\"initializing embeddings\")\n",
-    "embedding_dim = 20\n",
+    "embedding_dim = 25\n",
     "xs = np.random.normal(size=(cooc.shape[0], embedding_dim))\n",
     "ys = np.random.normal(size=(cooc.shape[1], embedding_dim))\n",
     "\n",
@@ -181,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +205,7 @@
     "X = X[indices]\n",
     "y = y[indices]\n",
     "\n",
-    "j = 0.9\n",
+    "j = 0.5\n",
     "\n",
     "train_X = X[0:int(j*len(y))]\n",
     "train_y = y[0:int(j*len(y))]\n",
@@ -223,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,23 +239,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LinearSVC(C=1.0, class_weight=None, dual=True, fit_intercept=True,\n",
-       "          intercept_scaling=1, loss='squared_hinge', max_iter=10000,\n",
-       "          multi_class='ovr', penalty='l2', random_state=None, tol=0.0001,\n",
-       "          verbose=0)"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lsvc = svm.LinearSVC(max_iter=10000)\n",
     "lsvc.fit(train_X, train_y)"
@@ -261,45 +249,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.5937"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "accuracy(test_y, lsvc.predict(test_X))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "SGDClassifier(alpha=0.0001, average=False, class_weight=None,\n",
-       "              early_stopping=False, epsilon=0.1, eta0=0.0, fit_intercept=True,\n",
-       "              l1_ratio=0.15, learning_rate='optimal', loss='hinge',\n",
-       "              max_iter=1000, n_iter_no_change=5, n_jobs=None, penalty='l2',\n",
-       "              power_t=0.5, random_state=None, shuffle=True, tol=0.001,\n",
-       "              validation_fraction=0.1, verbose=0, warm_start=False)"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sgdcl = SGDClassifier()\n",
     "sgdcl.fit(train_X, train_y)"
@@ -307,22 +268,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.5944"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "y_pred = sgdcl.predict(test_X)\n",
+    "accuracy(test_y, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lr = LogisticRegression()\n",
+    "lr.fit(train_X, train_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = lr.predict(test_X)\n",
+    "accuracy(test_y, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Let's try with MLP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mlp = MLPClassifier(hidden_layer_sizes=(100,), max_iter=1000)\n",
+    "mlp.fit(train_X, train_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = mlp.predict(test_X)\n",
+    "accuracy(test_y, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mlp = MLPClassifier(hidden_layer_sizes=(100,20,100), max_iter=1000, activation='relu')\n",
+    "mlp.fit(train_X, train_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = mlp.predict(test_X)\n",
     "accuracy(test_y, y_pred)"
    ]
   },
