--- a/project02/sam.ipynb
+++ b/project02/sam.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,8 @@
     "from sklearn import svm\n",
     "from sklearn.linear_model import SGDClassifier\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.neural_network import MLPClassifier"
+    "from sklearn.neural_network import MLPClassifier\n",
+    "from helpers import *"
    ]
   },
   {
@@ -68,9 +69,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(21161, 20)"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "word_embeddings = np.load(\"embeddings.npy\")\n",
     "word_embeddings.shape"
@@ -87,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,16 +114,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2133"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.argmax(words_list==\"paul\")"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Remove common small words"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "common_words = [\"a\", \"the\", \"of\", \"he\", \"she\", \"I\", \"we\", \"you\", \"they\", \"to\", \"out\", \"in\",\\\n",
+    "                \"oi\", \"it\", \"this\", \"that\", \"these\", \"there\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,8 +166,9 @@
     "    words_in_tweet = tw.split(\" \")\n",
     "    acc = np.zeros(word_embeddings[0].shape[0])\n",
     "    for w in words_in_tweet:\n",
-    "        vec = word_embeddings[np.argmax(words_list==w)]\n",
-    "        acc += vec\n",
+    "        if w not in common_words:\n",
+    "            vec = word_embeddings[np.argmax(words_list==w)]\n",
+    "            acc += vec\n",
     "    acc = acc/len(words_in_tweet)\n",
     "    tweets_pos_vec.append(acc)\n",
     "tweets_pos_vec = np.array(tweets_pos_vec)"
@@ -135,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,8 +191,9 @@
     "    words_in_tweet = tw.split(\" \")\n",
     "    acc = np.zeros(word_embeddings[0].shape[0])\n",
     "    for w in words_in_tweet:\n",
-    "        vec = word_embeddings[np.argmax(words_list==w)]\n",
-    "        acc += vec\n",
+    "        if w not in common_words:\n",
+    "            vec = word_embeddings[np.argmax(words_list==w)]\n",
+    "            acc += vec\n",
     "    acc = acc/len(words_in_tweet)\n",
     "    tweets_neg_vec.append(acc)\n",
     "tweets_neg_vec = np.array(tweets_neg_vec)"
@@ -166,12 +208,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
     "np.save('tweets_pos_vec', tweets_pos_vec)\n",
     "np.save('tweets_neg_vec', tweets_neg_vec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tweets_pos_vec = np.load('tweets_pos_vec.npy')\n",
+    "tweets_neg_vec = np.load('tweets_neg_vec.npy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = np.concatenate((tweets_pos_vec, tweets_neg_vec))\n",
+    "y = np.concatenate((np.ones((tweets_pos_vec.shape[0])), -1*np.ones((tweets_pos_vec.shape[0]))))\n",
+    "\n",
+    "X, y = remove_duplicated_tweets(X, y)\n",
+    "\n",
+    "indices = np.random.permutation(len(y))\n",
+    "\n",
+    "X = X[indices]\n",
+    "y = y[indices]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save(\"tweets_X\", X)\n",
+    "np.save(\"tweets_y\", y)"
    ]
   },
   {
@@ -183,29 +263,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tweets_pos_vec = np.load('tweets_pos_vec.npy')\n",
-    "tweets_neg_vec = np.load('tweets_neg_vec.npy')"
+    "X = np.load(\"tweets_X.npy\")\n",
+    "y = np.load(\"tweets_y.npy\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = np.concatenate((tweets_pos_vec, tweets_neg_vec))\n",
-    "y = np.concatenate((np.ones((tweets_pos_vec.shape[0])), -1*np.ones((tweets_pos_vec.shape[0]))))\n",
-    "\n",
-    "indices = np.random.permutation(len(y))\n",
-    "\n",
-    "X = X[indices]\n",
-    "y = y[indices]\n",
-    "\n",
-    "j = 0.5\n",
+    "j = 0.9\n",
     "\n",
     "train_X = X[0:int(j*len(y))]\n",
     "train_y = y[0:int(j*len(y))]\n",
@@ -225,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,9 +377,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MLPClassifier(activation='relu', alpha=0.0001, batch_size='auto', beta_1=0.9,\n",
+       "              beta_2=0.999, early_stopping=False, epsilon=1e-08,\n",
+       "              hidden_layer_sizes=(100,), learning_rate='constant',\n",
+       "              learning_rate_init=0.001, max_iter=1000, momentum=0.9,\n",
+       "              n_iter_no_change=10, nesterovs_momentum=True, power_t=0.5,\n",
+       "              random_state=None, shuffle=True, solver='adam', tol=0.0001,\n",
+       "              validation_fraction=0.1, verbose=False, warm_start=False)"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mlp = MLPClassifier(hidden_layer_sizes=(100,), max_iter=1000)\n",
     "mlp.fit(train_X, train_y)"
@@ -315,9 +404,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6065310195708821"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y_pred = mlp.predict(test_X)\n",
     "accuracy(test_y, y_pred)"
@@ -325,9 +425,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MLPClassifier(activation='relu', alpha=0.0001, batch_size='auto', beta_1=0.9,\n",
+       "              beta_2=0.999, early_stopping=False, epsilon=1e-08,\n",
+       "              hidden_layer_sizes=(100, 20, 100), learning_rate='constant',\n",
+       "              learning_rate_init=0.001, max_iter=1000, momentum=0.9,\n",
+       "              n_iter_no_change=10, nesterovs_momentum=True, power_t=0.5,\n",
+       "              random_state=None, shuffle=True, solver='adam', tol=0.0001,\n",
+       "              validation_fraction=0.1, verbose=False, warm_start=False)"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mlp = MLPClassifier(hidden_layer_sizes=(100,20,100), max_iter=1000, activation='relu')\n",
     "mlp.fit(train_X, train_y)"
@@ -335,20 +452,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6040915895104507"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y_pred = mlp.predict(test_X)\n",
     "accuracy(test_y, y_pred)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Try with combination"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def combine_output(y1, y2):\n",
+    "    \"\"\"\n",
+    "    take +1 if at least one of the classifier outputs +1\n",
+    "    \"\"\"\n",
+    "    y = y1+y2\n",
+    "    y[y>0] = 1.\n",
+    "    return y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_final = combine_output(combine_output(mlp.predict(test_X), lsvc.predict(test_X)), lr.predict(test_X))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6023729001496922"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy(y_final, test_y)"
+   ]
   }
  ],
  "metadata": {
