--- a/project02/julie.ipynb
+++ b/project02/julie.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +11,14 @@
     "from sklearn.linear_model import SGDClassifier\n",
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.model_selection import ShuffleSplit\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.neural_network import MLPClassifier\n",
     "from helpers import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -27,19 +29,16 @@
       "6496907 nonzero entries\n",
       "using nmax = 100 , cooc.max() = 207302\n",
       "initializing embeddings\n",
-      "epoch 0\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-497a238b2735>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Create embeddings with glove_solution\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mglove_solution\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmain\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mglove_main\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mglove_main\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/Documents/Repos/Machine-learning/project02/glove_solution.py\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m     33\u001b[0m             \u001b[0mscale\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0meta\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mfn\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mlogn\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m             \u001b[0mxs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mix\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mscale\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 35\u001b[0;31m             \u001b[0mys\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mjy\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mscale\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     36\u001b[0m     \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'embeddings'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mxs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "epoch 0\n",
+      "epoch 1\n",
+      "epoch 2\n",
+      "epoch 3\n",
+      "epoch 4\n",
+      "epoch 5\n",
+      "epoch 6\n",
+      "epoch 7\n",
+      "epoch 8\n",
+      "epoch 9\n"
      ]
     }
    ],
@@ -51,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,26 +98,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'do'"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "conjugate(\"don't\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -127,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,62 +117,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'unique_tweets_pos_txt' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-ab33cd0e0c8f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m common = ['\"', ',', '.', ')', '(', '-', \"<user>\", \"<url>\", \"a\", \"the\", \"of\", \"to\", \\\n\u001b[1;32m      2\u001b[0m                 \"it\", \"this\", \"that\", \"these\", \"there\"]\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mt\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mt\u001b[0m \u001b[0;32min\u001b[0m \u001b[0munique_tweets_pos_txt\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m70\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\" \"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mt\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcommon\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mif\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'!'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'!'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'!'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'unique_tweets_pos_txt' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "common = ['\"', ',', '.', ')', '(', '-', \"<user>\", \"<url>\", \"a\", \"the\", \"of\", \"to\", \\\n",
-    "                \"it\", \"this\", \"that\", \"these\", \"there\"]\n",
-    "t = [t for t in unique_tweets_pos_txt[70].split(\" \") if t not in common]\n",
-    "\n",
-    "if(t[0:3] == ['!', '!', '!']):\n",
-    "    t = t[3:]\n",
-    "print(t)\n",
-    "print([conjugate(w) for w in t])\n",
-    "conjugate(\"dont\")"
+    "#Spelling changes\n",
+    "spelling_dict = {\"u\" : \"you\", \"dont\" : \"don't\", \"cant\" : \"can't\", \"r\" : \"are\", \"wont\" : \"won't\"}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(100000,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Filter tweets\n",
     "common = ['\"', ',', '.', ')', '(', '-', \\\n",
     "                \"<user>\", \"<url>\", \"a\", \"the\", \"of\", \"to\", \\\n",
     "                \"it\", \"this\", \"that\", \"these\", \"there\"]\n",
-    "tweets_pos_vec = tweet_means(tweets_pos_txt, word_embeddings, \\\n",
-    "                             words_list, word_embeddings[0].shape[0], \\\n",
-    "                             true, common)\n",
-    "tweets_neg_vec = tweet_means(tweets_new_txt, word_embeddings, \\\n",
-    "                             words_list, word_embeddings[0].shape[0], \\\n",
-    "                             true, common)"
+    "tweets_pos_vec_clean = tweet_means(unique_tweets_pos_txt, word_embeddings,\n",
+    "                             words_list, word_embeddings[0].shape[0],\n",
+    "                             spelling=True, spelling_dict=spelling_dict, \n",
+    "                             negation=True, \n",
+    "                             clean=True, common=common)\n",
+    "tweets_neg_vec_clean = tweet_means(unique_tweets_neg_txt, word_embeddings, \n",
+    "                             words_list, word_embeddings[0].shape[0], \n",
+    "                             True, spelling_dict, \n",
+    "                             True, \n",
+    "                             True, common)\n",
+    "\n",
+    "np.save('tweets_pos_vec_clean', tweets_pos_vec_clean)\n",
+    "np.save('tweets_neg_vec_clean', tweets_neg_vec_clean)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,12 +160,15 @@
     "tweets_pos_vec = tweet_means(tweets_pos_txt, \\\n",
     "    word_embeddings, words_list, word_embeddings[0].shape[0])\n",
     "tweets_neg_vec = tweet_means(tweets_new_txt, \\\n",
-    "    word_embeddings, words_list, word_embeddings[0].shape[0])"
+    "    word_embeddings, words_list, word_embeddings[0].shape[0])\n",
+    "\n",
+    "np.save('tweets_pos_vec', tweets_pos_vec)\n",
+    "np.save('tweets_neg_vec', tweets_neg_vec)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,12 +185,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tweets_pos_vec = np.load('tweets_pos_vec.npy')\n",
-    "tweets_neg_vec = np.load('tweets_neg_vec.npy')"
+    "tweets_pos_vec = np.load('tweets_pos_vec_clean.npy')\n",
+    "tweets_neg_vec = np.load('tweets_neg_vec_clean.npy')"
    ]
   },
   {
@@ -239,18 +201,18 @@
    "source": [
     "#TO USE IF ALGO ASKS LABEL TO BE 1 AND -1\n",
     "X = np.concatenate((tweets_pos_vec, tweets_neg_vec))\n",
-    "y = np.concatenate((np.ones((tweets_pos_vec.shape[0])), -1*np.ones((tweets_pos_vec.shape[0]))))"
+    "y = np.concatenate((np.ones((tweets_pos_vec.shape[0])), -1*np.ones((tweets_neg_vec.shape[0]))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "#TO USE IF ALGO ASKS LABEL TO BE 1 AND 0\n",
     "X = np.concatenate((tweets_pos_vec, tweets_neg_vec))\n",
-    "y = np.concatenate((np.ones((tweets_pos_vec.shape[0])), np.zeros((tweets_pos_vec.shape[0]))))"
+    "y = np.concatenate((np.ones((tweets_pos_vec.shape[0])), np.zeros((tweets_neg_vec.shape[0]))))"
    ]
   },
   {
@@ -270,41 +232,94 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "numpy.random.seed(42)\n",
+    "clf = ???\n",
+    "cv = ShuffleSplit(n_splits=5, test_size=0.3, random_state=42)\n",
+    "scores = cross_val_score(estimator=clf, X, y, scoring=accuracy, cv=cv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVM : 0.6134671593227816\n",
+      "SGD : 0.6115921248552363\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LR : 0.6081177962830199\n",
+      "MLP : 0.6166105994595489\n"
+     ]
+    }
+   ],
+   "source": [
+    "# VERSION SAMUEL : \n",
+    "\n",
     "j = 0.9\n",
+    "\n",
+    "indices = np.random.permutation(len(y))\n",
+    "\n",
+    "X = X[indices]\n",
+    "y = y[indices]\n",
     "\n",
     "train_X = X[0:int(j*len(y))]\n",
     "train_y = y[0:int(j*len(y))]\n",
     "test_X = X[int(j*len(y)):]\n",
     "test_y = y[int(j*len(y)):]\n",
     "\n",
+    "indices = np.random.permutation(len(y))\n",
+    "\n",
+    "X = X[indices]\n",
+    "y = y[indices]\n",
+    "\n",
     "def accuracy(y1, y2):\n",
     "    return np.mean(y1==y2)\n",
     "\n",
+    "lsvc = svm.LinearSVC(max_iter=10000)\n",
+    "lsvc.fit(train_X, train_y)\n",
+    "print(\"SVM : \" + str(accuracy(test_y, lsvc.predict(test_X))))\n",
+    "\n",
+    "sgdcl = SGDClassifier()\n",
+    "sgdcl.fit(train_X, train_y)\n",
+    "print(\"SGD : \" + str(accuracy(test_y, sgdcl.predict(test_X))))\n",
+    "\n",
+    "lr = LogisticRegression()\n",
+    "lr.fit(train_X, train_y)\n",
+    "print(\"LR : \" + str(accuracy(test_y, lr.predict(test_X))))\n",
+    "\n",
     "mlp = MLPClassifier(hidden_layer_sizes=(100,), max_iter=1000)\n",
     "mlp.fit(train_X, train_y)\n",
-    "y_pred = mlp.predict(test_X)\n",
-    "accuracy(test_y, y_pred)"
+    "print(\"MLP : \" + str(accuracy(test_y, mlp.predict(test_X))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "positional argument follows keyword argument (<ipython-input-20-bcdad1a63b29>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-bcdad1a63b29>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    scores = cross_val_score(estimator=y, X, y, scoring=accuracy, cv=cv)\u001b[0m\n\u001b[0m                                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m positional argument follows keyword argument\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "numpy.random.seed(42)\n",
-    "clf = ???\n",
-    "cv = ShuffleSplit(n_splits=5, test_size=0.3, random_state=42)\n",
-    "scores = cross_val_score(estimator=clf, X, y, scoring=accuracy, cv=cv)"
+    "# Accuracy after clean + Samuel pipeline\n",
+    "\n",
+    "SVM : 0.6134671593227816\n",
+    "SGD : 0.6115921248552363\n",
+    "LR : 0.6081177962830199\n",
+    "MLP : 0.6166105994595489"
    ]
   }
  ],
