--- a/project02/sam.ipynb
+++ b/project02/sam.ipynb
@@ -233,7 +233,7 @@
    "outputs": [],
    "source": [
     "X = np.concatenate((tweets_pos_vec, tweets_neg_vec))\n",
-    "y = np.concatenate((np.ones((tweets_pos_vec.shape[0])), -1*np.ones((tweets_pos_vec.shape[0]))))\n",
+    "y = np.concatenate((np.ones((tweets_pos_vec.shape[0])), -1*np.ones((tweets_neg_vec.shape[0]))))\n",
     "\n",
     "X, y = remove_duplicated_tweets(X, y)\n",
     "\n",
@@ -539,7 +539,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
